# fake-reviews

./: README.md
docs/: Fake Review Detection amazon.docx
fake-reviews-app/: .gitignore  pyproject.toml
fake-reviews-app/fake_reviews_app/: app.py  combined.joblib  features.py  kaggle.joblib  labelencoder.pkl  le_roberta_new.pkl  scaler_roberta_new.pkl
fake-reviews-react/: package-lock.json  package.json
fake-reviews-react/src/: App.tsx
fake-reviews-react/src/components/: ReviewForm.tsx
fake-reviews-react/src/types/: index.ts
